syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.chore.common";
option java_outer_classname = "AuthServiceProto";
option objc_class_prefix = "ATH";

package authservice;

// AuthService communicates with the UserService to validate credentials.
service AuthService {
  // Authenticates a user by checking username and password via the UserService.
  rpc AuthenticateUser(AuthRequest) returns (AuthResponse);
}

// The request containing the username and password to authenticate.
message AuthRequest {
  string username = 1;
  string password = 2;
}

// The response from the authentication process.
message AuthResponse {
  bool success = 1; // Whether authentication was successful.
  string message = 2; // Authentication result message (e.g. "Authentication successful" or error message).
}
